--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,45 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-Jinja2==3.1.2
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.2
-SQLAlchemy==2.0.21
-selenium==4.12.0
-requests==2.31.0
-Pillow==10.0.1
-python-dotenv==1.0.0
-stripe==6.5.0
-gunicorn==21.2.0
+attrs==25.1.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+dnspython==2.7.0
 email-validator==2.0.0
-pytest==7.4.2
-WTForms==3.0.1
+Flask==2.2.5
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.1.1
+greenlet==3.1.1
+gunicorn==21.2.0
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.2
+MarkupSafe==3.0.2
+numpy==2.2.3
+opencv-python==4.11.0.86
+outcome==1.3.0.post0
+packaging==24.2
+Pillow==10.0.1
+pluggy==1.5.0
+PyJWT==2.10.1
+PySocks==1.7.1
+pytest==7.4.2
+python-dotenv==1.0.0
+requests==2.31.0
+selenium==4.12.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.21
+stripe==6.5.0
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+urllib3==2.3.0
 webdriver-manager==4.0.0
+Werkzeug==2.3.7
+wsproto==1.2.0
+WTForms==3.0.1
+gunicorn
+gunicorn==20.1.0
