--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
+alembic==1.15.1
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==2.3.3
 Flask-Login==0.6.2
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.0.3
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 PyJWT==2.10.1
 python-dotenv==1.0.1
@@ -18,4 +21,3 @@ stripe==11.6.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==2.3.7
-gunicorn==20.1.0
