--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,8 @@ stripe==11.6.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==2.3.7
-flask-migrate
 authlib
+flask-mail==0.9.1
+paypalrestsdk==1.13.1
+six
+pyOpenSSL
